# Cpp-Practice-Labs

./: CAN Bus Emulator with State and Adapter Patterns.md  ideas.md  ideas2
RuleEngine/: CMakeLists.txt  Readme.md
RuleEngine/app/: CMakeLists.txt  main.cpp
RuleEngine/src/common/: Event.h
RuleEngine/src/core/: EventProcessor.h  EventQueue.h
RuleEngine/src/input_sources/: CMakeLists.txt  TimerScheduler.cpp
TaskScheduler/: main  main.cpp
can_node_emu/: CAN_Bus_Emulator.md  CMakeLists.txt  main.cpp
can_node_emu/src/: can_frame.h  can_interface.h  scoketcan_adapter.h
repe_engine/: CMakeLists.txt  main.cpp
repe_engine/action_dispatcher/: ActionDispatcher.cpp  ActionDispatcher.h  CMakeLists.txt
repe_engine/actions/: ActionFactory.cpp  ActionFactory.h  CMakeLists.txt  HttpAction.cpp  HttpAction.h  IActionCommand.h  LogAction.cpp  LogAction.h  ShellCommandAction.cpp  ShellCommandAction.h
repe_engine/common/: Event.h  IInputStrategy.h
repe_engine/core/: EventProcessor.h  EventQueue.h
repe_engine/docs/: Architecture Document.md  Requirement Document.md
repe_engine/docs/UML/: Class Diagram  Component Diagram  Sequence Diagram
repe_engine/input_sources/: CMakeLists.txt  FileWatcher.cpp  FileWatcher.h  RestApiEndpoint.cpp  RestApiEndpoint.h  SocketListener.cpp  SocketListener.h  TimerScheduler.cpp  TimerScheduler.h
repe_engine/rules/: CMakeLists.txt  Rule.cpp  Rule.h  RuleManager.cpp  RuleManager.h  RuleParser.cpp  RuleParser.h
repe_engine/rules/conditions/: ICondition.h  LogicalConditions.cpp  LogicalConditions.h  ValueCondition.cpp  ValueCondition.h
repe_engine/tests/: ActionFactoryTest.cpp  CMakeLists.txt  EventQueueTest.cpp  RuleParserTest.cpp
